fix: scrollbar and animations

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
-html{
-    scroll-behavior: smooth;
+html {
+  scroll-behavior: smooth;
+  scrollbar-width: none;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
